# HumanoidRobotics

01_git/: README.md
02_linear_algebra/: CMakeLists.txt  README.md  package.xml  tutor comments
02_linear_algebra/include/linear_algebra/: LinearAlgebra.h
02_linear_algebra/src/: LinearAlgebra.cpp  main.cpp
02_linear_algebra/test/: test_linear_algebra.cpp
03_odometry_calibration/: CMakeLists.txt  README.md  package.xml  tutor comments
03_odometry_calibration/include/odometry_calibration/: CalibrationData.h  FileIO.h  OdometryCalibration.h
03_odometry_calibration/src/: FileIO.cpp  OdometryCalibration.cpp  main.cpp
03_odometry_calibration/test/: test_odometry_calibration.cpp
04_projective_geometry/: CMakeLists.txt  README.md  package.xml
04_projective_geometry/include/projective_geometry/: ProjectiveGeometry.h
04_projective_geometry/src/: ProjectiveGeometry.cpp  main.cpp
04_projective_geometry/test/: test_projective_geometry.cpp
05_camera_calibration/: CMakeLists.txt  README.md  package.xml  tutor comments
05_camera_calibration/include/camera_calibration/: CameraCalibration.h  FileIO.h
05_camera_calibration/src/: CameraCalibration.cpp  FileIO.cpp  main.cpp
05_camera_calibration/test/: test_camera_calibration.cpp
06_forward_kinematics/: CMakeLists.txt  README.md  package.xml
06_forward_kinematics/data/: joints.txt
06_forward_kinematics/include/forward_kinematics/: FileIO.h  ForwardKinematics.h  RosIO.h
06_forward_kinematics/launch/: nao.launch  rviz-config.rviz
06_forward_kinematics/scripts/: plot.gp
06_forward_kinematics/src/: FileIO.cpp  ForwardKinematics.cpp  RosIO.cpp  main.cpp
06_forward_kinematics/test/: test_forward_kinematics.cpp
07_octree_representation/: README.md  solution  tutor comments
08_kdtree/: README.md  tutor comments
09_signed_distance_function/: CMakeLists.txt  README.md  package.xml
09_signed_distance_function/data/: data.txt
09_signed_distance_function/include/signed_distance_function/: FileIO.h  SignedDistanceFunction.h
09_signed_distance_function/scripts/: plot_3d.gp  plot_map.gp
09_signed_distance_function/src/: FileIO.cpp  SignedDistanceFunction.cpp  main.cpp
09_signed_distance_function/test/: test_signed_distance_function.cpp
10_icp/: CMakeLists.txt  README.md  package.xml
10_icp/data/: data.txt
10_icp/include/icp/: FileIO.h  ICP.h
10_icp/scripts/: plot.gp
10_icp/src/: FileIO.cpp  ICP.cpp  main.cpp
10_icp/test/: test_icp.cpp
11_particle_filter/: CMakeLists.txt  README.md  package.xml  tutor comments
11_particle_filter/data/: data  groundTruth  light_sources
11_particle_filter/include/particle_filter/: FileIO.h  ParticleFilter.h
11_particle_filter/scripts/: plot.gp
11_particle_filter/src/: FileIO.cpp  ParticleFilter.cpp  main.cpp
11_particle_filter/test/: test_particle_filter.cpp
12_astar/: README.md  tutor comments
13_path_planning/: CMakeLists.txt  README.md  package.xml  tutor comments
13_path_planning/data/: map.pbm  map.txt
13_path_planning/include/path_planning/: AbstractNode.h  ClosedList.h  FileIO.h  GridMap.h  GridNode.h  Heuristic.h  OpenList.h  PathPlanning.h
13_path_planning/scripts/: plot.gp
13_path_planning/src/: ClosedList.cpp  FileIO.cpp  GridNode.cpp  OpenList.cpp  PathPlanning.cpp  main.cpp
13_path_planning/test/: test_path_planning.cpp
14_footstep_planning/: CMakeLists.txt  README.md  package.xml  tutor comments
14_footstep_planning/data/: Makefile  distance_0.pgm  distance_105.pgm  distance_120.pgm  distance_135.pgm  distance_15.pgm  distance_150.pgm  distance_165.pgm  distance_30.pgm  distance_45.pgm  distance_60.pgm  distance_75.pgm  distance_90.pgm  map.pbm
14_footstep_planning/include/footstep_planning/: FileIO.h  FootstepMap.h  FootstepNode.h  FootstepPlanning.h
14_footstep_planning/scripts/: plot.gp  plot_footprint.gp
14_footstep_planning/src/: FileIO.cpp  FootstepMap.cpp  FootstepNode.cpp  FootstepPlanning.cpp  main.cpp
14_footstep_planning/test/: test_footstep_planning.cpp
15_inverse_kinematics/: CMakeLists.txt  README.md  package.xml  tutor comments
15_inverse_kinematics/include/inverse_kinematics/: InverseKinematics.h
15_inverse_kinematics/scripts/: plot.gp
15_inverse_kinematics/src/: InverseKinematics.cpp  main.cpp
15_inverse_kinematics/test/: test_inverse_kinematics.cpp
16_rrt/: CMakeLists.txt  README.md  package.xml  tutor comments
16_rrt/data/: map.pbm  map.txt
16_rrt/include/rrt/: AbstractNode.h  FileIO.h  GridMap.h  GridNode.h  RRT.h
16_rrt/scripts/: plot.gp
16_rrt/src/: FileIO.cpp  GridNode.cpp  RRT.cpp  main.cpp
16_rrt/test/: test_RRT.cpp
17_irm/: CMakeLists.txt  README.md  package.xml
17_irm/include/irm/: AbstractIRM.h  FileIO.h  IRM.h
17_irm/scripts/: plot-irm.gp  plot-rm.gp
17_irm/src/: AbstractIRM.cpp  FileIO.cpp  IRM.cpp  main.cpp
17_irm/test/: test_irm.cpp
18_statistical_testing/: CMakeLists.txt  README.md  package.xml  tutor comments
18_statistical_testing/include/statistical_testing/: StatisticalTesting.h
18_statistical_testing/src/: StatisticalTesting.cpp  main.cpp
18_statistical_testing/test/: test_statistical_testing.cpp
