<?xml version="1.0"?>
<package>
  <name>forward_kinematics</name>
  <version>0.0.1</version>
  <description>Forward kinematics package for the humanoid robotics lecture</description>
  <maintainer email="sosswald@cs.uni-bonn.de">Stefan Osswald</maintainer>
  <author email="s6zdmilc@uni-bonn.de">Zdravko Milcheski</author>
  <author email="s6mdazim@uni-bonn.de">Md Aman Azim</author>
  <author email="deckenkang66@gmail.com">Che-Hao Kang</author>

  <license>Internal use only</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <test_depend>gtest</test_depend>
  <export>
  </export>
</package>
