<?xml version="1.0"?>
<package>
  <name>irm</name>
  <version>0.0.1</version>
  <description>irm package for the humanoid robotics lecture</description>
  <maintainer email="sosswald@cs.uni-bonn.de">Stefan Osswald</maintainer>
  <author email="s6ibshar@uni-bonn.de">Ibrahim Hussain Shareef</author>
  <author email="finditarul@gmail.com">Arul Selvam</author>

  <license>Internal use only</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
